--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,3 @@
 body{
-    background: greenyellow;
-	width: 970px;
-	margin: auto;
+    background: pink;
 	}
-h1{
-font-size: 42px;
-}
-p{
-  font-size: 30px;
-  }
-  body div{
-  font-size:24px;
-  }
